--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.15.0",
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.24",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-lottie-player": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
